# platform.core.appfw.notification-service

./: Makefile.am  README  autogen.sh  bluetooth_notification_client.c  configure.ac  main.c  notification_display_service.c  notification_service.c  notification_service.h  notifications-display-ivi.service.in  notifications-display-wayland.service.in  notifications-display-x11.service.in  notifications-display.service.in  notifications.service.in  notifications.socket.in  notifications_display.service.in  sample_display_client.c  send_notification.c  service_common.c  service_common.h
packaging/: notification-service.changes  notification-service.spec
plugins/: Makefile.am  wlmessage.c
